--- a/index.html
+++ b/index.html
@@ -82,6 +82,13 @@
             </div>
         </div>
     </div>
+    <!-- Payment Modal -->
+    <div id="payModal" class="modal hidden">
+        <div class="modal-content">
+            <p>✅ Thank you for your purchase!</p>
+            <button onclick="closePayModal()">OK</button>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
